--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>ISSO É THE TOWN!</title>
 </head>
 <body>
@@ -36,7 +36,7 @@
 
 
         </section>
-            <img src="./assets/the-town.png">
+            <img src="./the-town.png">
         
     
         </main>
