--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                           <img src="./linkedinlink.png">
                         </a>
                      
-                    <a  class="apresentacao__links__navegacao" href="https://github.com/guilhermeonrails?tab=packages">
+                    <a  class="apresentacao__links__navegacao" href="https://https://github.com/RedHoodq">
                         GitHub
                         <img src="./githublink.png">
                          
